# rust-mssql-driver

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXECUTE_PROCEDURE.md  EXECUTE_PROCEDURE_TESTS.md  Justfile  LIMITATIONS.md  MAINTAINERS.md  MIGRATION.md  PRODUCTION_READINESS.md  README.md  RELEASE_CHECKLIST.md  RELEASING.md  SECURITY.md  STABILITY.md  STORED_PROCEDURES.md  UNSUPPORTED.md  deny.toml  index.html  release-plz.toml  rust-toolchain.toml  typos.toml
.cargo/: audit.toml
.config/: hakari.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  (+1 more)
crates/api-smoke/: Cargo.toml
crates/api-smoke/src/: lib.rs
crates/doc-tests/: Cargo.toml
crates/doc-tests/src/: lib.rs
crates/mssql-auth/: Cargo.toml  README.md
crates/mssql-auth/src/: aead.rs  azure_ad.rs  azure_identity_auth.rs  azure_keyvault.rs  cek_envelope.rs  cert_auth.rs  credentials.rs  encryption.rs  error.rs  integrated_auth.rs  key_store.rs  key_unwrap.rs  lib.rs  native_sspi.rs  negotiator.rs  provider.rs  sql_auth.rs  sspi_auth.rs  windows_certstore.rs
crates/mssql-auth/tests/: ae_interop.rs  cek_envelope_interop.rs  generate_ae_fixtures.py  kerberos_live.rs
crates/mssql-auth/tests/fixtures/: CekHarness.java  test_cmk_rsa2048.pem
crates/mssql-client/: Cargo.toml  README.md
crates/mssql-client/benches/: buffered_decode.rs  client.rs
crates/mssql-client/examples/: azure_sql.rs  basic.rs  bulk_insert.rs  chinese_query.rs  collation_encoding.rs  connection_pool.rs  derive_macros.rs  error_handling.rs  stored_proc.rs  stored_procedure_multiple.rs  stored_procedure_simplified.rs  stored_procedure_timeout.rs  streaming.rs  transactions.rs
crates/mssql-client/src/: blob.rs  blob_stream.rs  browser.rs  bulk.rs  cancel.rs  change_tracking.rs  client.rs  column_decryptor.rs  column_parser.rs  config.rs  encryption.rs  error.rs  filestream.rs  from_row.rs  instrumentation.rs  lib.rs  plp.rs  procedure.rs  query.rs  row.rs  row_source.rs  row_stream.rs  state.rs  statement_cache.rs  stream.rs  to_params.rs  transaction.rs  tvp.rs  validation.rs
crates/mssql-client/src/client/: connect.rs  mod.rs  params.rs  response.rs
crates/mssql-client/src/config/: mod.rs  types.rs
crates/mssql-client/tests/: always_encrypted.rs  azure_sql.rs  blob_stream.rs  bulk_insert.rs  change_tracking_live.rs  collation_test.rs  config.rs  derive_compile_tests.rs  derive_runtime.rs  edge_cases.rs  error_handling.rs  integration.rs  protocol_conformance.rs  query_stream.rs  resilience.rs  rpc_roundtrip.rs  statement_cache_live.rs  stored_procedure.rs  streaming_memory.rs  stress.rs  stress_tests.rs  timeout_scenarios.rs  type_matrix.rs  type_state_compile_tests.rs  version_compatibility.rs  windows_filestream.rs  windows_sspi.rs
crates/mssql-client/tests/compile-fail/: from_row_on_enum.rs  from_row_on_enum.stderr  from_row_tuple_struct.rs  from_row_tuple_struct.stderr  to_params_on_enum.rs  to_params_on_enum.stderr  tvp_missing_type_name.rs  tvp_missing_type_name.stderr  tvp_on_enum.rs  tvp_on_enum.stderr  tvp_tuple_struct.rs  tvp_tuple_struct.stderr
crates/mssql-client/tests/compile-fail-state/: begin_transaction_on_disconnected.rs  begin_transaction_on_disconnected.stderr  commit_on_ready.rs  commit_on_ready.stderr  query_on_disconnected.rs  query_on_disconnected.stderr
crates/mssql-codec/: Cargo.toml  README.md
crates/mssql-codec/src/: connection.rs  error.rs  framed.rs  lib.rs  message.rs  packet_codec.rs
crates/mssql-derive/: Cargo.toml  README.md
crates/mssql-derive/src/: attributes.rs  from_row.rs  lib.rs  naming.rs  to_params.rs  tvp.rs
crates/mssql-pool/: Cargo.toml  README.md
crates/mssql-pool/examples/: connection_pool.rs
crates/mssql-pool/src/: config.rs  error.rs  lib.rs  lifecycle.rs  pool.rs
crates/mssql-pool/tests/: integration.rs
crates/mssql-testing/: Cargo.toml  README.md
crates/mssql-testing/src/: container.rs  fixtures.rs  lib.rs  mock_server.rs  tls.rs
crates/mssql-testing/tests/: mock_fidelity.rs  multi_subnet.rs  otel_metrics.rs  otel_procedure_metrics.rs  redirect.rs  retry.rs
crates/mssql-tls/: Cargo.toml  README.md
crates/mssql-tls/src/: config.rs  connector.rs  error.rs  lib.rs  prelogin_wrapper.rs
crates/mssql-types/: Cargo.toml  README.md
crates/mssql-types/benches/: types.rs
crates/mssql-types/src/: decode.rs  encode.rs  error.rs  from_sql.rs  lib.rs  to_sql.rs  tvp.rs  value.rs
crates/mssql-types/tests/: type_conversions.rs
crates/tds-protocol/: Cargo.toml  README.md
crates/tds-protocol/benches/: protocol.rs
crates/tds-protocol/src/: codec.rs  collation.rs  crypto.rs  error.rs  lib.rs  login7.rs  packet.rs  prelogin.rs  prelude.rs  rpc.rs  sql_batch.rs  token.rs  tvp.rs  types.rs  version.rs
docs/: ALWAYS_ENCRYPTED.md  BENCHMARKS.md  CANCEL_SAFETY.md  COMPARATIVE_BENCHMARKS.md  COMPARISON.md  CONNECTION_RECOVERY.md  CONNECTION_STRINGS.md  DDL.md  DEPENDENCY_POLICY.md  DEPLOYMENT.md  DERIVE_MACROS.md  ERRORS.md  FEATURES.md  FILESTREAM.md  LOB.md  MEMORY.md  MIGRATION_FROM_TIBERIUS.md  OPENTELEMETRY.md  OPERATIONS.md  PERFORMANCE_BASELINES.md  POOL_METRICS.md  RETRY_STRATEGY.md  SECURITY_AUDIT_PREP.md  SQL_SERVER_COMPATIBILITY.md  STORED_PROCEDURES.md  STORED_PROCEDURE_API.md  STRESS_TESTING.md  TEST_FAILURE_AUDIT.md  TIMEOUTS.md  TLS.md  TROUBLESHOOTING.md  TYPE_STATE.md  VERSION_REFS.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: collation_decode.rs  connection_string.rs  crypto_decode.rs  decode_value.rs  parse_column_value.rs  parse_env_change.rs  parse_login7.rs  parse_packet.rs  parse_prelogin.rs  parse_rpc.rs  parse_token.rs  type_roundtrip.rs
public-api/: mssql-auth.txt  mssql-auth.windows.txt  mssql-client.txt  mssql-client.windows.txt  mssql-codec.txt  mssql-derive.txt  mssql-driver-pool.txt  mssql-tls.txt  mssql-types.txt  tds-protocol.txt
scripts/: check-changelog-completeness.sh  check-doc-consistency.sh  check-public-api.sh  check-publish-invariants.sh  sync-readme-version.sh
xtask/: Cargo.toml
(+19 files in other folders)
