[workspace]
resolver = "3"
members = ["crates/*", "xtask"]
exclude = ["fuzz"]  # Fuzz tests have their own workspace (required by cargo-fuzz)

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-mssql-driver/rust-mssql-driver"
keywords = ["sql-server", "mssql", "tds", "database", "async"]
categories = ["database"]

[workspace.dependencies]
# Internal crates (version required for crates.io publishing)
tds-protocol = { version = "0.1.0", path = "crates/tds-protocol" }
mssql-tls = { version = "0.1.0", path = "crates/mssql-tls" }
mssql-codec = { version = "0.1.0", path = "crates/mssql-codec" }
mssql-types = { version = "0.1.0", path = "crates/mssql-types" }
mssql-auth = { version = "0.1.0", path = "crates/mssql-auth" }
mssql-driver-pool = { version = "0.1.0", path = "crates/mssql-pool" }
mssql-client = { version = "0.1.0", path = "crates/mssql-client" }
mssql-derive = { version = "0.1.0", path = "crates/mssql-derive" }
mssql-testing = { version = "0.1.0", path = "crates/mssql-testing" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.26"

# Data handling
bytes = "1.9"
chrono = { version = "0.4", default-features = false, features = ["std"] }
uuid = { version = "1.11", features = ["v4"] }
rust_decimal = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2.2"
webpki-roots = "0.26"

# Error handling
thiserror = "2.0"

# Logging and tracing
tracing = "0.1"

# Utilities
parking_lot = "0.12"
hashbrown = "0.15"
smallvec = "1.13"
pin-project-lite = "0.2"
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1"
once_cell = "1.20"
regex = "1.11"
lru = "0.12"

# Observability (used with `otel` feature in individual crates)
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-otlp = "0.31"
tracing-opentelemetry = "0.32"

# Testing
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.5"
testcontainers = "0.23"
tokio-test = "0.4"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
