[package]
name = "mssql-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

# Empty workspace table makes this package a standalone workspace
# (required by cargo-fuzz since it uses a different build process)
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
bytes = "1.9"

[dependencies.tds-protocol]
path = "../crates/tds-protocol"

[dependencies.mssql-client]
path = "../crates/mssql-client"
features = ["default"]

[dependencies.mssql-types]
path = "../crates/mssql-types"
features = ["default"]

[[bin]]
name = "parse_packet"
path = "fuzz_targets/parse_packet.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_token"
path = "fuzz_targets/parse_token.rs"
test = false
doc = false
bench = false

[[bin]]
name = "connection_string"
path = "fuzz_targets/connection_string.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_prelogin"
path = "fuzz_targets/parse_prelogin.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_value"
path = "fuzz_targets/decode_value.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_login7"
path = "fuzz_targets/parse_login7.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_rpc"
path = "fuzz_targets/parse_rpc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "collation_decode"
path = "fuzz_targets/collation_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_env_change"
path = "fuzz_targets/parse_env_change.rs"
test = false
doc = false
bench = false

[[bin]]
name = "crypto_decode"
path = "fuzz_targets/crypto_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "type_roundtrip"
path = "fuzz_targets/type_roundtrip.rs"
test = false
doc = false
bench = false
