[package]
name = "mssql-client"
description = "High-level async SQL Server client with type-state connection management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["sql-server", "mssql", "database", "async", "tokio"]
categories = ["database", "asynchronous"]

[features]
default = ["chrono", "uuid", "decimal", "encoding"]
chrono = ["mssql-types/chrono", "dep:chrono"]
uuid = ["mssql-types/uuid"]
decimal = ["mssql-types/decimal", "dep:rust_decimal"]
json = ["mssql-types/json"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]
# Secure credential handling with automatic memory zeroization
zeroize = ["mssql-auth/zeroize"]
# Always Encrypted client-side encryption support
always-encrypted = ["mssql-auth/always-encrypted"]
# Collation-aware string encoding/decoding for VARCHAR columns
# Enables proper handling of non-ASCII text in VARCHAR/CHAR columns with
# locale-specific encodings (Japanese Shift_JIS, Chinese GB18030/Big5, Korean EUC-KR, etc.)
encoding = ["tds-protocol/encoding", "mssql-types/encoding"]

[dependencies]
tds-protocol = { workspace = true }
mssql-tls = { workspace = true }
mssql-codec = { workspace = true }
mssql-types = { workspace = true }
mssql-auth = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-core = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
lru = { workspace = true }

# Optional: chrono for date/time types
chrono = { workspace = true, optional = true }

# Optional: rust_decimal for DECIMAL/NUMERIC types
rust_decimal = { workspace = true, optional = true }

# Optional: OpenTelemetry integration
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
mssql-derive = { workspace = true }
mssql-driver-pool = { workspace = true }
tracing-subscriber = "0.3"
rust_decimal = { workspace = true }
criterion = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
# Always Encrypted test dependencies
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
rand = "0.8"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "azure_sql"
path = "examples/azure_sql.rs"

[[example]]
name = "transactions"
path = "examples/transactions.rs"

[[example]]
name = "bulk_insert"
path = "examples/bulk_insert.rs"

[[example]]
name = "derive_macros"
path = "examples/derive_macros.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "collation_encoding"
path = "examples/collation_encoding.rs"

[[bench]]
name = "client"
harness = false

[package.metadata.cargo-machete]
# tokio-test and mssql-derive are dev-dependencies for tests
# opentelemetry_sdk and tracing-opentelemetry are behind the otel feature flag
ignored = ["tokio-test", "mssql-derive", "opentelemetry_sdk", "tracing-opentelemetry"]

[lints]
workspace = true
