[package]
name = "mssql-client"
description = "High-level async SQL Server client with type-state connection management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["sql-server", "mssql", "database", "async", "tokio"]
categories = ["database", "asynchronous"]

[package.metadata.docs.rs]
# docs.rs builds on Linux x86_64. Excluded: sspi-auth (Windows-only) and
# integrated-auth (libgssapi system library not guaranteed on docs.rs).
features = ["otel", "json", "always-encrypted", "azure-identity", "cert-auth", "zeroize", "encoding", "tls", "chrono", "uuid", "decimal", "filestream"]

[features]
default = ["chrono", "uuid", "decimal", "encoding", "tls", "derive"]
# Derive macros (`#[derive(FromRow, ToParams, Tvp)]`), re-exported from
# `mssql-derive` so users need only the `mssql-client` dependency. On by
# default; disable with `default-features = false` if you don't use them.
derive = ["dep:mssql-derive"]
# Type support features — forwarded to mssql-types
chrono = ["mssql-types/chrono", "dep:chrono"]
uuid = ["mssql-types/uuid", "dep:uuid"]
decimal = ["mssql-types/decimal", "dep:rust_decimal"]
json = ["mssql-types/json"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]
# Secure credential handling with automatic memory zeroization
zeroize = ["mssql-auth/zeroize"]
# Internal hooks for the fuzzing harness (fuzz/). Not public API.
fuzzing = []
# Internal hooks for the allocation benchmark (benches/). Not public API.
bench = []
# Always Encrypted client-side encryption support
# Activates crypto deps in mssql-auth: aes, cbc, hmac, sha2, rsa, rand, parking_lot
always-encrypted = ["mssql-auth/always-encrypted", "dep:encoding_rs"]
# Collation-aware string encoding/decoding for VARCHAR columns.
# Forwarded to both tds-protocol (wire-level) and mssql-types (type-level).
# Both use encoding_rs for codec support.
encoding = ["tds-protocol/encoding", "mssql-types/encoding"]
# Azure Managed Identity / Service Principal token acquisition for
# Azure AD (FEDAUTH) logins. Pre-acquired tokens (Credentials::AzureAccessToken)
# work without this feature. Note: pulls OpenSSL transitively via the Azure SDK
# (see the trade-off note in ARCHITECTURE.md ADR-003).
azure-identity = ["mssql-auth/azure-identity"]
# Client-certificate Azure AD (Entra service principal) token acquisition for
# FEDAUTH logins. The certificate authenticates to Entra (not TDS-level mTLS).
cert-auth = ["mssql-auth/cert-auth"]
# Integrated authentication (Kerberos/SPNEGO) - Linux/macOS
integrated-auth = ["mssql-auth/integrated-auth"]
# Windows SSPI integrated authentication
sspi-auth = ["mssql-auth/sspi-auth"]
# TLS/SSL encryption support (enabled by default)
# Disable this feature for environments where TLS is not needed (enterprise internal networks,
# legacy SQL Server instances, or development environments) to reduce binary size and compile time.
# When disabled, only `Encrypt=no_tls` connections are supported.
tls = ["dep:mssql-tls"]
# Verify server certificates against the OS/platform trust store (enterprise
# internal CAs). Implies `tls`. Off by default — see the mssql-tls `native-certs`
# feature. Honored only when no explicit root certificates are configured.
native-certs = ["tls", "mssql-tls/native-certs"]
# FILESTREAM BLOB access (Windows only)
# Enables async read/write of SQL Server FILESTREAM data via the Win32 OpenSqlFilestream API.
# Requires the Microsoft OLE DB Driver for SQL Server (msoledbsql.dll) at runtime.
filestream = ["tokio/fs"]

[dependencies]
# tds-protocol and mssql-types disable default features at the workspace root
# (#305) so a downstream `--no-default-features` build of mssql-client can shed
# the upstream type/codec features. The needed features are forwarded
# explicitly: `std` unconditionally here (mssql-client is a std crate), and
# `encoding`/`chrono`/`uuid`/`decimal`/`json` via mssql-client's own features.
tds-protocol = { workspace = true, features = ["std"] }
mssql-tls = { workspace = true, optional = true }
mssql-codec = { workspace = true }
mssql-types = { workspace = true }
mssql-auth = { workspace = true }
mssql-derive = { workspace = true, optional = true }
bytes = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true }
futures-core = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
lru = { workspace = true }

# Optional: chrono for date/time types
chrono = { workspace = true, optional = true }

# Optional: uuid for UNIQUEIDENTIFIER (GUID) types
uuid = { workspace = true, optional = true }

# Optional: rust_decimal for DECIMAL/NUMERIC types
rust_decimal = { workspace = true, optional = true }
encoding_rs = { workspace = true, optional = true }

# Optional: OpenTelemetry integration
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
trybuild = { workspace = true }
# Note: mssql-driver-pool removed to break circular dev-dependency.
# Pool-dependent tests are in mssql-testing crate.
tracing-subscriber = "0.3"
rust_decimal = { workspace = true }
criterion = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
# Always Encrypted test dependencies
rsa = { version = "0.9", features = ["sha2"] }
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "azure_sql"
path = "examples/azure_sql.rs"

[[example]]
name = "transactions"
path = "examples/transactions.rs"

[[example]]
name = "bulk_insert"
path = "examples/bulk_insert.rs"

[[example]]
name = "derive_macros"
path = "examples/derive_macros.rs"
required-features = ["derive"]

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "collation_encoding"
path = "examples/collation_encoding.rs"

[[bench]]
name = "client"
harness = false

# Allocation benchmark for the buffered row-decode path (#300). Counts heap
# allocations via a custom global allocator; no valgrind or extra deps.
# Run with: cargo bench -p mssql-client --bench buffered_decode --features bench
[[bench]]
name = "buffered_decode"
harness = false
required-features = ["bench"]

# Integration tests that reference feature-gated APIs (type mapping, derive
# macros, or the TLS error type) unconditionally. Declaring `required-features`
# lets `cargo test --no-default-features` skip them instead of failing to
# compile (#329). Each set is the minimal one whose absence breaks compilation;
# tests not listed here compile feature-free and stay auto-discovered.
[[test]]
name = "azure_sql"
required-features = ["chrono"]

[[test]]
name = "error_handling"
required-features = ["tls"]

[[test]]
name = "bulk_insert"
required-features = ["chrono", "decimal", "uuid"]

[[test]]
name = "derive_runtime"
required-features = ["derive"]

[[test]]
name = "integration"
required-features = ["chrono", "decimal", "uuid"]

[[test]]
name = "protocol_conformance"
required-features = ["chrono", "uuid"]

[[test]]
name = "version_compatibility"
required-features = ["chrono", "decimal"]

[package.metadata.cargo-machete]
# tokio-test is a dev-dependency for tests
# opentelemetry_sdk and tracing-opentelemetry are behind the otel feature flag
# mssql-tls is behind the tls feature flag; mssql-derive behind the derive feature flag
ignored = ["tokio-test", "opentelemetry_sdk", "tracing-opentelemetry", "mssql-tls", "mssql-derive"]

[lints]
workspace = true
