[package]
name = "mssql-codec"
description = "Async TDS packet framing and codec for SQL Server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["sql-server", "codec", "async", "framing"]
categories = ["network-programming", "asynchronous"]

[features]
default = []

[dependencies]
# tds-protocol's default features are disabled at the workspace root (#305);
# forward only `std` here. mssql-codec does not use tds-protocol's
# `encoding`-gated APIs, so a `--no-default-features` build can drop encoding_rs.
# `encoding` is still enabled in the default workspace build via mssql-client's
# `encoding` feature (feature unification).
tds-protocol = { workspace = true, features = ["std"] }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true }
pin-project-lite = { workspace = true }
futures-core = { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }

[dev-dependencies]
tokio-test = { workspace = true }

[package.metadata.cargo-machete]
# tokio-test is used in dev-dependencies for test utilities
ignored = ["tokio-test"]

[lints]
workspace = true
