[package]
name = "mssql-derive"
description = "Procedural macros for SQL Server row mapping"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["sql-server", "derive", "macro", "orm"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
mssql-types = { workspace = true }
mssql-client = { workspace = true }
trybuild = "1.0"

[lints]
workspace = true
