[package]
name = "mssql-testing"
description = "Test infrastructure for SQL Server driver development"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["sql-server", "testing", "testcontainers", "mock"]
categories = ["development-tools::testing"]

[features]
default = []

[dependencies]
mssql-client = { workspace = true }
tds-protocol = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "sync", "rt", "fs"] }
thiserror = { workspace = true }
tracing = { workspace = true }
testcontainers = { workspace = true }

[package.metadata.cargo-machete]
# mssql-client is a peer dependency for test consumers
ignored = ["mssql-client"]

[lints]
workspace = true
