[package]
name = "mssql-testing"
description = "Test infrastructure for SQL Server driver development"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["sql-server", "testing", "testcontainers", "mock"]
categories = ["development-tools::testing"]
publish = false

[features]
default = []
# Enables the OTel metrics emission test against the mock server.
otel = ["mssql-client/otel"]

[dependencies]
mssql-client = { workspace = true }
# tds-protocol's default features are disabled at the workspace root (#305);
# this dev-only crate only needs `std`.
tds-protocol = { workspace = true, features = ["std"] }
bytes = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = "0.14"
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true }
testcontainers = { workspace = true }

[dev-dependencies]
mssql-tls = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }

[[test]]
name = "otel_metrics"
required-features = ["otel"]

[package.metadata.cargo-machete]
# mssql-client is a peer dependency for test consumers
ignored = ["mssql-client"]

[lints]
workspace = true
